fix(menu): fix menu cropped on firefox

--- a/assets/sass/_menu.scss
+++ b/assets/sass/_menu.scss
@@ -9,7 +9,7 @@
         >li {
           >a {
             color:#FFF;
-            padding: 15px 10px;
+            padding: 12px 10px;
             text-shadow: none;
             &:hover, &:focus {
               color:#666;
